# project

./: .gitignore  CMakeLists.txt  Raw Data.xlsm  Raw Data.xlsx  Untitled Document 1  cpuclock.cpp  graphplot.cpp  project.cpp  vsolver.cpp  vsover.h
Final Data/: CNF_plot.txt
V10/: V10_1  V10_10  V10_2  V10_3  V10_4  V10_5  V10_6  V10_7  V10_8  V10_9
V13/: V13_1  V13_10  V13_2  V13_3  V13_4  V13_5  V13_6  V13_7  V13_8  V13_9
V15/: V15_1  V15_10  V15_2  V15_3  V15_4  V15_5  V15_6  V15_7  V15_8  V15_9
V17/: V17_1  V17_10  V17_2  V17_3  V17_4  V17_5  V17_6  V17_7  V17_8  V17_9
V5/: V5_1  V5_10  V5_2  V5_3  V5_4  V5_5  V5_6  V5_7  V5_8  V5_9
V7/: V7_1  V7_10  V7_2  V7_3  V7_4  V7_5  V7_6  V7_7  V7_8  V7_9
minisat/: CMakeCache.txt  Makefile  cmake_install.cmake
